Fix UTF-8 (use unicode, rename "umlaute")

--- a/vignettes/read_data.Rmd
+++ b/vignettes/read_data.Rmd
@@ -123,7 +123,7 @@ path_renamings <- file.path(kwb.utils::desktop(), "tmp/DWC/wells/renamings")
     tidyr::drop_na()
   
   # Kommentar: Es gibt Messungen zu 929 Brunnen, im Durchschnitt 40 Messwerte 
-  # pro Brunnen, im Median 80 m³/h momentane Förderleistung
+  # pro Brunnen, im Median 80 m3/h momentane Foerderleistung
   
   
   # 4. drilling and surface water body information
@@ -178,7 +178,7 @@ path_renamings <- file.path(kwb.utils::desktop(), "tmp/DWC/wells/renamings")
       sema.berlin.utils::my_theme() + 
       ggplot2::scale_y_continuous(breaks = scales::pretty_breaks()) +
       ggplot2::scale_x_continuous(breaks = scales::pretty_breaks()) +
-      ggplot2::labs(x = "Q_obs_median [m³/h]", y = "Frequency [-]")
+      ggplot2::labs(x = "Q_obs_median [m\u00B3/h]", y = "Frequency [-]")
     summary(df_Q_agg)
     
     ggplot2::ggsave("histogram_Ergiebigkeit_Q_obs.png", width = 4, height = 2.5, dpi = 600)
