--- a/vignettes/prepare_data.Rmd
+++ b/vignettes/prepare_data.Rmd
@@ -6,6 +6,8 @@ vignette: >
   %\VignetteIndexEntry{Prepare Data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+
+
 ---
 
 ```{r, include = FALSE}
@@ -15,136 +17,276 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup, eval = FALSE}
-# source("C:/Users/mriech/Desktop/R_Development/RScripts/SEMA/UseCase_Berlin/1_DataPreparation/SEMA_PrepareData_Berlin.R")
+```{r setup, eval = TRUE}
 
-# links:
-# https://www.brodrigues.co/blog/2020-03-08-tidymodels/
-# https://www.r-bloggers.com/2021/02/machine-learning-with-r-a-complete-guide-to-gradient-boosting-and-xgboost/
-# https://www.r-bloggers.com/2021/02/deep-learning-with-r-and-keras-build-a-handwritten-digit-classifier-in-10-minutes/
-# https://www.r-bloggers.com/2021/02/getting-started-with-k-means-and-tidytuesday-employment-status/
-# https://www.r-bloggers.com/2021/03/k-means-101-an-introductory-guide-to-k-means-clustering-in-r/
+# Paths and packages -----------------------------------------------------------
 
 library(dwc.wells)
 
+path_list <- list(
+  db = file.path(kwb.utils::desktop(), "tmp/DWC/wells/BWB_WV_Brunnenexport_2017.mdb"),
+  renamings = dwc.wells::extdata_file("renamings"),
+  renamings_main = "<renamings>/main.csv",
+  renamings_material_filter = "<renamings>/material_filter.csv",
+  renamings_material_vollrohr = "<renamings>/material_vollrohr.csv",
+  renamings_surface_water = "<renamings>/surface_water.csv",
+  renamings_quality = "<renamings>/quality.csv",
+  lookup_actions = "<renamings>/actions.csv"
+)
 
-# MAIN 0: load paths and variables ---------------------------------------------
-
-path_db <- file.path(kwb.utils::desktop(), "tmp/DWC/wells/BWB_WV_Brunnenexport_2017.mdb")
-path_renamings <- file.path(kwb.utils::desktop(), "tmp/DWC/wells/renamings")
-
-
-# MAIN 1: Read data ------------------------------------------------------------
-
-  # 0. load renamings
-  renamings <- dwc.wells::load_renamings_excel(file.path(path_renamings, "Parameterliste.xlsx"))
-  renamings_quality <- dwc.wells::load_renamings_csv(file.path(path_renamings, "quality.csv"))
-
-  # 1. general well characteristics
-  df_main <- dwc.wells::read_select_rename(path_db, "WV_GMS_TBL_GWBR", renamings)
-
-  # 2.  pump test data
-  df_pump_tests <- read_select_rename(path_db, "WV_BRU_TBL_PUMPENTECHNDATEN", renamings)
-
-  # 3. Q measurement data
-  df_Q <- read_select_rename(path_db, "WV_BRU_TBL_ERG", renamings)
-
-  # 4. drilling and surface water body information
-  df_drilling <- read_select_rename(path_db, "WV_GMS_TBL_BOHRUNGEN", renamings)
-
-  # 5. water quality data
-  #df_quality <- read_select_rename(path_db, "DB2LABOR_Daten_Kreuztabelle", renamings)
-  df_quality <- read_select_rename(path_db, "DB2LABOR_Daten", renamings)
+paths <- kwb.utils::resolve(path_list)
 
 
-# MAIN 2: prepare data ---------------------------------------------------------
+# MAIN 0: Read renamings -------------------------------------------------------
 
-  # 1. general well characteristics
-  str(df_main)
+if (TRUE) {
+
+  # load renamings
+
+  elements <- c("main", "quality", "material_filter",
+                "material_vollrohr", "surface_water")
+
+  renamings <- lapply(paste("renamings", elements, sep = "_"), function(x) {
+    load_renamings_csv(paths[[x]])
+    })
+
+  names(renamings) <- elements
+
+  lookup <- list(actions = load_renamings_csv(paths$lookup_actions))
+
+}
+
+
+# MAIN 1: general well characteristics and water body information --------------
+
+if (FALSE) {
+
+  # read main data
+  df_main <- read_select_rename(paths$db,
+                                "WV_GMS_TBL_GWBR",
+                                renamings$main,
+                                old_name_col = "old_name",
+                                new_name_col = "new_name_de")
+
+  # read data with water body information
+  df_drilling <- read_select_rename(paths$db,
+                                    "WV_GMS_TBL_BOHRUNGEN",
+                                    renamings$main,
+                                    old_name_col = "old_name",
+                                    new_name_col = "new_name_de")
+
+  # append water body data
+  df_main <- dplyr::left_join(df_main, df_drilling)
+
+
+  # filter Vertikalfilterbrunnen
+  df_main <- df_main %>% dplyr::filter(grepl("V$", Name_Brunnen))
+
+
+  # group categorical variables (material, surface water)
+  df_main <- df_main %>%
+    dplyr::mutate(Filtermaterial = rename_values(Filtermaterial,
+                                                 renamings$material_filter),
+                  Vollrohrmaterial = rename_values(Vollrohrmaterial,
+                                                   renamings$material_vollrohr),
+                  Gewaesser = rename_values(Gewaesser, renamings$surface_water)
+                  )
+
+  # correct false date imports in case of NA
+  df_main <- df_main %>%
+    dplyr::mutate(Datum_Inbetriebnahme = dplyr::na_if(Datum_Inbetriebnahme,
+                                                    "1899-12-30 00:00:00"))
+
+  # modify data types
   df_main <- df_main %>%
     dplyr::mutate(Baujahr = as.Date(Baujahr, format = "%Y-%m-%d"),
-                  dat_Inbetriebnahme = dplyr::na_if(dat_Inbetriebnahme, "1899-12-30 00:00:00"),
-                  dat_Inbetriebnahme = as.Date(dat_Inbetriebnahme,
+                  Datum_Inbetriebnahme = as.Date(Datum_Inbetriebnahme,
                                                format = "%Y-%m-%d"),
-                  dat_RWS = as.Date(dat_RWS, format = "%d.%m.%Y"),
-                  fil_Brunnenfunktion = as.factor(fil_Brunnenfunktion),
-                  fil_Brunnenzustand = as.factor(fil_Brunnenzustand),
-                  mw_Aquifer = as.factor(mw_Aquifer),
-                  mw_Spannung = as.factor(mw_Spannung),
-                  mw_Vollrohrmaterial = as.factor(mw_Vollrohrmaterial),
-                  mw_Inliner = as.factor(mw_Inliner),
-                  Gebiet = as.factor(Gebiet))
+                  Jahr_Inbetriebnahme = lubridate::year(Datum_Inbetriebnahme),
+                  Datum_RWS = as.Date(Datum_RWS, format = "%d.%m.%Y"),
+                  Funktion_Brunnen = as.factor(Funktion_Brunnen),
+                  Zustand_Brunnen = as.factor(Zustand_Brunnen),
+                  Aquifer = as.factor(Aquifer),
+                  Spannung = as.factor(Spannung),
+                  Vollrohrmaterial = as.factor(Vollrohrmaterial),
+                  Filtermaterial = as.factor(Filtermaterial),
+                  Gebiet = as.factor(Gebiet),
+                  Gewaesser = as.factor(Gewaesser))
 
-  factor_vars <- names(df_main)[sapply(df_main, is.factor)]
 
-  for (factor_var in factor_vars) {
-    df_main[, factor_var] <- forcats::fct_explicit_na(
-      df_main[, factor_var], na_level = "Unbekannt"
-    )
-    df_main[df_main[, factor_var] == "", factor_var] <- "Unbekannt"
-    df_main[, factor_var] <- df_main[, factor_var] %>% droplevels()
+  # turn any NAs in factor variables to "Unbekannt"
+  df_main <- replace_NAs_in_factor_vars(df_main)
+
+
+  # Gebiet short name
+  df_main$Gebiet_short <- substr(df_main$Name_Brunnen, 1, 3)
+  table(df_main$Gebiet, df_main$Gebiet_short)
+
+}
+
+
+
+# MAIN 2: pump test data -------------------------------------------------------
+
+if (FALSE) {
+
+  # read data
+  df_pump_tests <- read_select_rename(paths$db,
+                                      "WV_BRU_TBL_PUMPENTECHNDATEN",
+                                      renamings$main,
+                                      old_name_col = "old_name",
+                                      new_name_col = "new_name_de")
+
+
+  # clean data
+  df_pump_tests <- df_pump_tests %>%
+    # assign date format to dates
+    dplyr::mutate(Datum_KPVvor = as.Date(Datum_KPVvor, format = "%Y-%m-%d"),
+                  Datum_KPVnach = as.Date(Datum_KPVnach, format = "%Y-%m-%d")) %>%
+    #filter(!(is.na(df_pump_tests$Datum_KPVvor) & is.na(df_pump_tests$Datum_KPVnach))) %>% # delete row if both values are NA
+    # tidyr::drop_na(Datum_KPVvor, Datum_KPVnach) %>% # delete row if one of the two values is NA
+    # get well characteristics to calculate Qs_rel
+    dplyr::left_join(df_main[, c("id_Brunnen", "Datum_Inbetriebnahme", "Qs_neu")], by = "id_Brunnen") %>%
+    # filter data with pump tests before operational start (data refers to rehabilitated well)
+    # dplyr::filter(Datum_KPVvor > Datum_Inbetriebnahme) %>%should be done later
+    # calculate Qs and Qs_rel before and after pump tests
+    dplyr::mutate(Qs_KPVvor = Q_KPVvor / (BWS_KPVvor - RWS_KPVvor),
+                  Qs_KPVvor_rel =  Qs_KPVvor / Qs_neu,
+                  Qs_KPVnach = Q_KPVnach / (BWS_KPVnach - RWS_KPVnach),
+                  Qs_KPVnach_rel =  Qs_KPVnach / Qs_neu) %>%
+    dplyr::arrange(id_Brunnen, ifelse(!is.na(Datum_KPVvor), Datum_KPVvor, Datum_KPVnach)) %>%
+    # check if pump test is associated with "Regenerierung"
+    dplyr::mutate(Regenerierung = REG_Mechanisch + REG_Sprengschock +
+                    REG_Hydropuls != 0,
+                  Pumpenwechsel = Pumpenwechsel != 0,
+                  Manschette = Manschette != 0) %>%
+    dplyr::mutate(Bemerkung_Liner = ifelse(
+      grepl("Liner|liner|Inliner|inliner|Lining|lining", Bemerkung), "Ja", "Nein"
+      )) %>%
+    dplyr::select(c("id_Brunnen", "Datum_Inbetriebnahme", "Qs_neu",
+                    "Datum_KPVvor", "Qs_KPVvor", "Qs_KPVvor_rel",
+                    "Datum_KPVnach", "Qs_KPVnach", "Qs_KPVnach_rel",
+                    "Regenerierung", "Pumpenwechsel", "Manschette"))
+
+
+  if (FALSE) {
+    write.table(df_pump_tests, file = "Kurzpumpversuche.csv", dec = ".", sep = ";", row.names = FALSE)
+  }
+  
+}
+
+
+# MAIN 3: Q measurement data ---------------------------------------------------
+
+  if (FALSE) {
+
+  # read data
+  df_Q <- read_select_rename(paths$db,
+                             "WV_BRU_TBL_ERG",
+                             renamings$main,
+                             old_name_col = "old_name",
+                             new_name_col = "new_name_de")
+  
+  
+  # turn date to date format
+  df_Q <- df_Q %>% 
+    dplyr::mutate(Datum_Qmom = as.Date(Datum_Qmom, format = "%Y-%m-%d"))
+ 
+  
+  # check ratio Qmom / Qzul
+  df_Q <- df_Q %>% 
+    dplyr::left_join(df_main[, c("id_Brunnen", "Qzul")]) %>%
+    dplyr::mutate(Ratio_Qmom_Qzul = Qmom / Qzul) %>%
+    dplyr::arrange(-Ratio_Qmom_Qzul)
+
+  
+  if (FALSE) {
+    write_csv(df_Q, "Qmom_Qzul_ratio.csv")
+  }
+
+  # Kommentar: Es gibt Messungen zu 929 Brunnen, im Durchschnitt 40 Messwerte
+  # pro Brunnen, im Median 80 m?/h momentane F?rderleistung
+
 
   }
 
 
-  summary(df_main)
-  str(df_main)
-  data.frame(table(df_main$fil_Brunnenfunktion))
+# MAIN 4: water quality data ---------------------------------------------------
+
+if (FALSE) {
+
+  # read data
+  df_quality <- read_select_rename(paths$db,
+                                   "DB2LABOR_Daten",
+                                   renamings$main,
+                                   old_name_col = "old_name",
+                                   new_name_col = "new_name_de")
 
 
-  # 2.  pump test data
-
-  df_pump_tests <- df_pump_tests %>%
-    dplyr::mutate(dat_KPVvor = as.Date(dat_KPVvor, format = "%Y-%m-%d"),
-                  dat_KPVnach = as.Date(dat_KPVnach, format = "%Y-%m-%d")) %>%
-    filter(!(is.na(df_pump_tests$dat_KPVvor) & is.na(df_pump_tests$dat_KPVnach))) %>% # delete row if both values are NA
-    # tidyr::drop_na(dat_KPVvor, dat_KPVnach) %>% # delete row if one of the two values is NA
-    dplyr::left_join(df_main[, c("id_Brunnen", "dat_Inbetriebnahme", "Qs_neu")], by = "id_Brunnen") %>%
-    dplyr::mutate(Qs_KPVvor = mw_Q_KPVvor / (mw_BWS_KPVvor - mw_RWS_KPVvor),
-                  Qs_KPVvor_rel =  Qs_KPVvor / Qs_neu,
-                  Qs_KPVnach = mw_Q_KPVnach / (mw_BWS_KPVnach - mw_RWS_KPVnach),
-                  Qs_KPVnach_rel =  Qs_KPVnach / Qs_neu) %>%
-    dplyr::arrange(id_Brunnen, ifelse(!is.na(dat_KPVvor), dat_KPVvor, dat_KPVnach)) %>%
-    dplyr::select(c("id_Brunnen", "dat_Inbetriebnahme", "Qs_neu",
-                    "dat_KPVvor", "Qs_KPVvor", "Qs_KPVvor_rel",
-                    "dat_KPVnach", "Qs_KPVnach", "Qs_KPVnach_rel"))
-
-  write.table(df_pump_tests, file = "Q_s_Berechnungen_v2.csv", dec = ".", sep = ";", row.names = FALSE)
+  # Select and rename quality parameter given in renamings file 'quality.csv'
+  df_quality <- df_quality %>%
+    dplyr::filter(Parameter %in% renamings$quality$old_name) %>%
+    dplyr::mutate(Parameter = rename_values(Parameter,
+                                     renamings$quality,
+                                     old_name_col = "old_name",
+                                     new_name_col = "new_name_de"))
 
 
-  # 3. Q measurement data
+  df_quality <- df_quality %>% 
+    dplyr::mutate(Datum = as.Date(Datum, format = "%Y-%m-%d"))
+              
+  
+  # transform concentration units from "µg/l" to "mg/l"
+  indices <- df_quality$Einheit == "µg/l"
+  df_quality[indices, "Wert"] <- df_quality[indices, "Wert"] * 10^-3
+  df_quality[indices, "Einheit"] <- "mg/l"
 
-  df_Q_agg <- dplyr::filter(df_Q, Qmom < 1000) %>%
-    dplyr::group_by(id_Brunnen) %>%
-    dplyr::summarise(Qmom_median = median(Qmom, na.rm = TRUE),
-                     std_dev = sd(Qmom, na.rm = TRUE),
-                     number = n()) %>%
-    tidyr::drop_na()
+  # delete measurements in unit "mg/kg"
+  df_quality <- df_quality %>%
+    dplyr::filter(Einheit != "mg/kg") %>%
+    dplyr::filter(! (Parameter == "TS" & Einheit == "%"))
 
-  # Kommentar: Es gibt Messungen zu 929 Brunnen, im Durchschnitt 40 Messwerte
-  # pro Brunnen, im Median 80 m3/h momentane Foerderleistung
+  df_quality %>% dplyr::group_by(Parameter) %>%
+    dplyr::summarise(length(unique(Einheit)))
 
+  # check units in quality data
+  for (par in unique(df_quality$Parameter)) {
 
-  # 4. drilling and surface water body information
+    a <- df_quality %>%
+      dplyr::filter(Parameter == par) %>%
+      dplyr::pull(Einheit) %>%
+      frequency_table()
 
-
-  # 5. water quality data
-
+    cat(paste0("\n", par, ":\n"))
+    print(a)
+  }
+  
+  # aggregate / clean data
   df_quality_agg <- df_quality %>%
-    dplyr::filter(Parameter %in% renamings_quality$old_name) %>%
-    dplyr::mutate(Parameter = renamings_quality$new_name[match(Parameter, renamings_quality$old_name)]) %>%
-    dplyr::mutate(dat_Wasserchemie = as.Date(dat_Wasserchemie, format = "%Y-%m-%d")) %>%
+    dplyr::mutate(Datum_Wasserchemie = as.Date(Datum, format = "%Y-%m-%d")) %>%
     dplyr::group_by(id_Brunnen, Parameter) %>%
     dplyr::summarise(median = median(Wert, na.rm = TRUE),
                      std_dev = sd(Wert, na.rm = TRUE),
-                     number = n()) %>%
-    dplyr::filter(Parameter != "mw_GV") %>%  # discard Gluehverlust data (only 11 wells with observations)
+                     number = dplyr::n()) %>%
+    dplyr::filter(Parameter != "GV") %>%  # discard Gluehverlust data (only 11 wells with observations)
     dplyr::select(id_Brunnen, Parameter, median) %>%
     tidyr::pivot_wider(names_from = Parameter, values_from = median,
-                        id_cols = "id_Brunnen") %>%
+                       id_cols = "id_Brunnen") %>%
     data.frame()
+  
+   lookup_par_unit <- aggregate(Einheit~Parameter, df_quality, FUN = unique)
 
-# MAIN 3: join data ------------------------------------------------------------
+   df_quality_agg_long <- df_quality_agg %>% 
+     tidyr::pivot_longer(cols = -1, names_to = "Parameter", values_to = "Wert") %>%
+     dplyr::left_join(lookup_par_unit)
+
+
+}
+
+
+# MAIN 5: join data ------------------------------------------------------------
+
+if (FALSE) {
 
   # verknuepfen
 
@@ -153,43 +295,20 @@ path_renamings <- file.path(kwb.utils::desktop(), "tmp/DWC/wells/renamings")
     dplyr::left_join(df_Q_agg, by = "id_Brunnen") %>%
     dplyr::right_join(df, df2, by = "id_Brunnen")
 
-  str(df)
   data.frame(table(df$fil_Brunnenfunktion))
 
-
-# MAIN 4: very first data analysis ---------------------------------------------
-
-  # export material lists
-
-  a <- data.frame(table(df_main$mw_Vollrohrmaterial, useNA = "ifany")) %>%
-    dplyr::arrange(-Freq)
-  write.table(a, file = "Materialien_Vollrohr.csv", dec = ".", sep = ";", row.names = FALSE)
-  b <- data.frame(table(df_main$mw_Inliner, useNA = "ifany")) %>%
-    dplyr::arrange(-Freq)
-  write.table(b, file = "Materialien_Inliner.csv", dec = ".", sep = ";", row.names = FALSE)
+}
 
 
-  # plot Q measurements
-    ggplot2::ggplot(df_Q_agg, ggplot2::aes(x = Qmom_median)) +
-      ggplot2::geom_histogram(fill = "lightblue", binwidth = 5) +
-      sema.berlin.utils::my_theme() +
-      ggplot2::scale_y_continuous(breaks = scales::pretty_breaks()) +
-      ggplot2::scale_x_continuous(breaks = scales::pretty_breaks()) +
-      ggplot2::labs(x = "Q_obs_median [m\u00B3/h]", y = "Frequency [-]")
-    summary(df_Q_agg)
+# MAIN 6: Data analysis -----------------------------------------------------------
 
-    ggplot2::ggsave("histogram_Ergiebigkeit_Q_obs.png", width = 4, height = 2.5, dpi = 600)
+if (FALSE) {
 
+  # export frequency lists
+  frequency_table(df_main$Gewaesser) %>% write_csv("Gewaesser.csv")
+  frequency_table(df_main$Filtermaterial) %>% write_csv("Materialien_Filter.csv")
 
+}
 
-  # first data analysis
-  data.frame(table(df$well_function, useNA = "ifany"))
-  a <- data.frame(table(df[df$well_function == "Betriebsbrunnen betriebsbereit", "surface_water_name"], useNA = "ifany")) %>% arrange(-Freq)
-  data.frame(table(df$surface_water_distance, useNA = "ifany"))
-
-
-  df <- read_ms_access(path_db, "WV_GMS_TBL_GWBR")
-  str(df)
-  sort(colnames(df))
 
 ```
