--- a/vignettes/prediction_xgboost.Rmd
+++ b/vignettes/prediction_xgboost.Rmd
@@ -203,7 +203,9 @@ scatterplot(df_pred, lines_80perc = FALSE, alpha = 1, pointsize = 0.9)
 ggsave("scatterplot_xgb_numeric.png", dpi = 600, width = 3.5, height = 3)
 ```
 
-### Classification Performance 
+## Classification
+
+
 
 ```{r classification}
 # classification performance ---------------------------------------------------
