--- a/vignettes/prediction_xgboost.Rmd
+++ b/vignettes/prediction_xgboost.Rmd
@@ -19,10 +19,10 @@ knitr::opts_chunk$set(
 ## Input Dataset
 
 ```{r input_dataset}
- library(dwc.wells) 
- library(tidymodels)
- df <- dwc.wells::model_data_reduced
- str(df)
+library(dwc.wells) 
+library(tidymodels)
+df <- dwc.wells::model_data_reduced
+str(df)
 
 ```
 
@@ -43,20 +43,6 @@ if (resampling == "random") {
   df_training <- data_split %>% rsample::training()
   df_test <- data_split %>% rsample::testing()
 
-  # for classification
-  df_training_cat <- df_training %>%
-    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
-
-  df_test_cat <- df_test %>%
-    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
-
-  data_split_cat <- rsample::initial_split(
-    df %>%
-      dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel)) %>%
-      dplyr::select(-well_id),
-    prop = 0.8,
-    strata = Qs_rel
-  )
 }
 
 
@@ -73,94 +59,100 @@ if (resampling == "by_well") {
   df_test <- df %>%
     dplyr::filter(well_id %in% test_ids) %>%
     dplyr::select(-well_id)
-
-  df_training_cat <- df_training %>%
-    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
-  df_test_cat <- df_test %>%
-    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
-
+  
 }
+
+tibble::as_tibble(df_training)
+tibble::as_tibble(df_test)
 
 ```
 
 ## Regression
 
 ### Hyperparameter Tuning
-
+1
 ```{r regression_hyperparameter_tuning, eval = FALSE}
 # Hyperparameter tuning --------------------------------------------------------
 
  # specify model
-  xgb_model <- boost_tree(
+  xgb_model <- parsnip::boost_tree(
     trees = 500,
-    tree_depth = tune(), min_n = tune(),
-    loss_reduction = tune(),                     ## first three: model complexity
-    sample_size = tune(), mtry = tune(),         ## randomness
-    learn_rate = tune(),                         ## step size
+    tree_depth = tune::tune(), ## model complexity
+    min_n = tune::tune(), ## model complexity
+    loss_reduction = tune::tune(), ## model complexity
+    sample_size = tune::tune(), ## randomness
+    mtry = tune::tune(), ## randomness
+    learn_rate = tune::tune(), ## step size
   ) %>%
-    set_engine("xgboost") %>%
-    set_mode("regression")
+    parsnip::set_engine("xgboost") %>%
+    parsnip::set_mode("regression")
 
   # set up workflow
-  xgb_wf <- workflow() %>%
-    add_formula(Qs_rel ~ .) %>%
-    add_model(xgb_model)
+  xgb_wf <- workflows::workflow() %>%
+    workflows::add_formula(Qs_rel ~ .) %>%
+    workflows::add_model(xgb_model)
 
   # hyperparameter sampling v1
-  xgb_grid <- grid_random(tree_depth(),
-                          min_n(),
-                          loss_reduction(),
-                          sample_size = sample_prop(),
-                          finalize(mtry(), df_training),
-                          learn_rate(range = c(0.01, 0.1), trans = NULL),
-                          size = 1000)
+  # xgb_grid <- dials::grid_random(dials::tree_depth(),
+  #                                dials::min_n(),
+  #                                dials::loss_reduction(),
+  #                                sample_size = dials::sample_prop(),
+  #                                dials::finalize(dials::mtry(), df_training),
+  #                                dials::learn_rate(range = c(0.01, 0.1), 
+  #                                                  trans = NULL),
+  #                                size = 1000)
 
     # hyperparameter sampling v2
-  xgb_grid <- grid_latin_hypercube(
-    tree_depth(),
-    min_n(),
-    loss_reduction(),
-    sample_size = sample_prop(),
-    finalize(mtry(), df_training),
-    learn_rate(),
+  xgb_grid <- dials::grid_latin_hypercube(
+    dials:::tree_depth(),
+    dials::min_n(),
+    dials::loss_reduction(),
+    sample_size = dials::sample_prop(),
+    dials::finalize(dials::mtry(), df_training),
+    dials::learn_rate(),
     size = 500
   )
 
   # define cross validation procedure
-  cv_folds <- vfold_cv(df_training, v = 5)
+  cv_folds <- rsample::vfold_cv(df_training, v = 5)
 
   # set up random grid with 20 combinations for first screening
   doParallel::registerDoParallel()
 
   # test different hyperparameters via cross validation on training data
   set.seed(234)
-  xgb_tuning <- tune_grid(
+  xgb_tuning <- tune::tune_grid(
     xgb_wf,
     resamples = cv_folds,
     grid = xgb_grid,
-    control = control_grid(save_pred = TRUE)
+    control = tune::control_grid(save_pred = TRUE)
   )
 
   # get assessment metrics
-  metrics <- xgb_tuning %>% collect_metrics()
-  save_data(metrics, getwd(), "metrics_tuning_xgb_random_resampling")
+  metrics <- collect_metrics(xgb_tuning)
+  
+  dwc.wells::save_data(metrics, 
+                       path = getwd(), 
+                       filename = "metrics_tuning_xgb_random_resampling")
 
   # visualise results
   metrics %>%
     #filter(learn_rate > 0.01) %>%
-    filter(.metric == "rmse") %>%
-    select(mean, min_n, mtry, tree_depth, learn_rate, loss_reduction, sample_size) %>%
-    pivot_longer(c(min_n, mtry, tree_depth, learn_rate, loss_reduction, sample_size),
-                 values_to = "value",
-                 names_to = "parameter"
-    ) %>%
-    ggplot(aes(value, mean, color = parameter)) +
-    geom_point(show.legend = FALSE, size = 0.5) +
-    facet_wrap(~parameter, scales = "free") +
-    labs(x = NULL, y = "RMSE [%]") +
+    dplyr::filter(.metric == "rmse") %>%
+    dplyr::select(mean, min_n, mtry, tree_depth, learn_rate, loss_reduction, sample_size) %>%
+    tidyr::pivot_longer(c(min_n, mtry, tree_depth, learn_rate, loss_reduction, sample_size),
+                        values_to = "value",
+                        names_to = "parameter") %>%
+    ggplot2::ggplot(ggplot2::aes(value, mean, color = parameter)) +
+    ggplot2::geom_point(show.legend = FALSE, size = 0.5) +
+    ggplot2::facet_wrap(~parameter, scales = "free") +
+    ggplot2::labs(x = NULL, y = "RMSE [%]") +
     sema.berlin.utils::my_theme()
 
-  ggsave("xgb_regression_hyperparameter_tuning_plot_random_resampling_1000_v2.png", width = 8, height = 4, dpi = 600)
+ggplot2::ggsave("xgb_regression_hyperparameter_tuning_plot_random_resampling_1000_v2.png", 
+                width = 8, 
+                height = 4, 
+                dpi = 600)
 
   # after example from https://juliasilge.com/blog/xgboost-tune-volleyball/
 
@@ -171,59 +163,69 @@ if (resampling == "by_well") {
 
 ```{r bestmodel}
 # Specify model ----------------------------------------------------------------
-
-xgb_model <- boost_tree(mtry = 6,
-                        min_n = 10,
-                        trees = 500,
-                        tree_depth = 7,
-                        loss_reduction = 10,
-                        learn_rate = 0.1,
-                        sample_size = 0.7) %>%
-  set_engine("xgboost", nthreads = parallel::detectCores()) %>%
-  set_mode("regression")
+xgb_model <- parsnip::boost_tree(mtry = 6,
+                                 min_n = 10,
+                                 trees = 500,
+                                 tree_depth = 7,
+                                 loss_reduction = 10,
+                                 learn_rate = 0.1,
+                                 sample_size = 0.7) %>%
+  parsnip::set_engine("xgboost") %>%
+  parsnip::set_mode("regression")
 
 
 # Model training and assessment (regression) -----------------------------------
 
 # Train model
 set.seed(26)
-xgb_fit <- xgb_model %>% fit(Qs_rel ~ ., data = df_training)
+xgb_fit <- xgb_model %>% parsnip::fit(Qs_rel ~ ., data = df_training)
 #usethis::use_data(xgb_fit, compress = "xz", overwrite = TRUE)
 
 # Make predictions
 predictions <- predict(xgb_fit, df_test)
 
 # Evaluate model performance
-df_pred <- df_test %>% select(Qs_rel) %>% bind_cols(predictions)
-rmse(df_pred, truth = Qs_rel, estimate = .pred)
-rsq(df_pred, truth = Qs_rel, estimate = .pred)
+df_pred <- df_test %>% 
+  dplyr::select(Qs_rel) %>% 
+  dplyr::bind_cols(predictions)
+
+yardstick::rmse(df_pred, truth = Qs_rel, estimate = .pred)
+yardstick::rsq(df_pred, truth = Qs_rel, estimate = .pred)
 
 # scatter plot
-scatterplot(df_pred, lines_80perc = FALSE, alpha = 1, pointsize = 0.9)
-ggsave("scatterplot_xgb_numeric.png", dpi = 600, width = 3.5, height = 3)
+dwc.wells::scatterplot(df_pred, 
+                       lines_80perc = FALSE, 
+                       alpha = 1, 
+                       pointsize = 0.9)
+ggplot2::ggsave("scatterplot_xgb_numeric.png",
+                dpi = 600,
+                width = 3.5,
+                height = 3)
 ```
 
 ## Classification
-
-
 
 ```{r classification}
 # classification performance ---------------------------------------------------
 
 # classify Qs data
 df_pred <- df_pred %>%
-  mutate(Qs_rel_class = classify_Qs(Qs_rel),
-         .pred_class = classify_Qs(.pred))
+  dplyr::mutate(Qs_rel_class = dwc.wells::classify_Qs(Qs_rel),
+                .pred_class = dwc.wells::classify_Qs(.pred))
 
 # confusion matrix
-matrix <- conf_mat(df_pred, truth = Qs_rel_class, estimate = .pred_class)
+matrix <- yardstick::conf_mat(df_pred, 
+                              truth = Qs_rel_class, 
+                              estimate = .pred_class)
+matrix 
 
 # performance metrics
-metrics <- matrix %>% summary()
+metrics <- summary(matrix)
+metrics
 
-save_data(matrix, getwd(), "xgb_numeric_to_class_matrix_split80", formats = "RData")
-save_data(metrics, getwd(), "xgb_numeric_to_class_metrics_split80")
-
-
+dwc.wells::save_data(matrix, 
+                     path = getwd(), 
+                     filename = "xgb_numeric_to_class_matrix_split80",
+                     formats = "RData")
 
 ```
