fix reduced model dataset and rf-vignette
replacement of umlauts in "Spuehlbohrung" had unintended side effect (resulting in integers for factor variables instead of names)

--- a/vignettes/prediction_xgboost.Rmd
+++ b/vignettes/prediction_xgboost.Rmd
@@ -19,11 +19,10 @@ knitr::opts_chunk$set(
 ## Input Dataset
 
 ```{r input_dataset}
-library(dwc.wells) 
-library(tidymodels)
-df <- dwc.wells::model_data_reduced
-str(df)
-
+ library(dwc.wells) 
+ df <- dwc.wells::model_data_reduced
+ str(df)
+ DT::datatable(head)
 ```
 
 ## Resampling
@@ -43,6 +42,20 @@ if (resampling == "random") {
   df_training <- data_split %>% rsample::training()
   df_test <- data_split %>% rsample::testing()
 
+  # for classification
+  df_training_cat <- df_training %>%
+    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
+
+  df_test_cat <- df_test %>%
+    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
+
+  data_split_cat <- rsample::initial_split(
+    df %>%
+      dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel)) %>%
+      dplyr::select(-well_id),
+    prop = 0.8,
+    strata = Qs_rel
+  )
 }
 
 
@@ -59,18 +72,20 @@ if (resampling == "by_well") {
   df_test <- df %>%
     dplyr::filter(well_id %in% test_ids) %>%
     dplyr::select(-well_id)
-  
-}
 
-tibble::as_tibble(df_training)
-tibble::as_tibble(df_test)
+  df_training_cat <- df_training %>%
+    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
+  df_test_cat <- df_test %>%
+    dplyr::mutate(Qs_rel = dwc.wells::classify_Qs(Qs_rel))
+
+}
 
 ```
 
 ## Regression
 
 ### Hyperparameter Tuning
-1
+
 ```{r regression_hyperparameter_tuning, eval = FALSE}
 # Hyperparameter tuning --------------------------------------------------------
 
@@ -93,7 +108,7 @@ tibble::as_tibble(df_test)
     workflows::add_model(xgb_model)
 
   # hyperparameter sampling v1
-  # xgb_grid <- dials::grid_random(dials::tree_depth(),
+  # xgb_grid <- dails::grid_random(dials::tree_depth(),
   #                                dials::min_n(),
   #                                dials::loss_reduction(),
   #                                sample_size = dials::sample_prop(),
@@ -103,13 +118,13 @@ tibble::as_tibble(df_test)
   #                                size = 1000)
 
     # hyperparameter sampling v2
-  xgb_grid <- dials::grid_latin_hypercube(
-    dials:::tree_depth(),
-    dials::min_n(),
-    dials::loss_reduction(),
-    sample_size = dials::sample_prop(),
-    dials::finalize(dials::mtry(), df_training),
-    dials::learn_rate(),
+  xgb_grid <- dails::grid_latin_hypercube(
+    dails::tree_depth(),
+    dails::min_n(),
+    dails::loss_reduction(),
+    sample_size = dails::sample_prop(),
+    dails::finalize(dails::mtry(), df_training),
+    dails::learn_rate(),
     size = 500
   )
 
@@ -163,6 +178,7 @@ ggplot2::ggsave("xgb_regression_hyperparameter_tuning_plot_random_resampling_100
 
 ```{r bestmodel}
 # Specify model ----------------------------------------------------------------
+
 xgb_model <- parsnip::boost_tree(mtry = 6,
                                  min_n = 10,
                                  trees = 500,
@@ -170,7 +186,8 @@ xgb_model <- parsnip::boost_tree(mtry = 6,
                                  loss_reduction = 10,
                                  learn_rate = 0.1,
                                  sample_size = 0.7) %>%
-  parsnip::set_engine("xgboost") %>%
+  parsnip::set_engine("xgboost", 
+                      nthreads = parallel::detectCores()) %>%
   parsnip::set_mode("regression")
 
 
@@ -225,7 +242,6 @@ metrics
 
 dwc.wells::save_data(matrix, 
                      path = getwd(), 
-                     filename = "xgb_numeric_to_class_matrix_split80",
-                     formats = "RData")
+                     filename = "xgb_numeric_to_class_matrix_split80")
 
 ```
