--- a/vignettes/prediction_xgboost.Rmd
+++ b/vignettes/prediction_xgboost.Rmd
@@ -15,6 +15,19 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Install R Package
+
+```{r install_r_package, eval = FALSE}
+# Enable KWB-R universe
+
+options(repos = c(
+  kwbr = 'https://kwb-r.r-universe.dev',
+  CRAN = 'https://cloud.r-project.org'))
+
+# Install R package "dwc.wells"
+install.packages('dwc.wells')
+```
+
 ## Input Dataset
 
 ```{r input_dataset}
