--- a/vignettes/prediction_random-forest.Rmd
+++ b/vignettes/prediction_random-forest.Rmd
@@ -26,7 +26,7 @@ options(repos = c(
   CRAN = 'https://cloud.r-project.org'))
 
 # Install R package "dwc.wells"
-install.packages('dwc.wells')
+install.packages('dwc.wells', dependencies = TRUE)
 ```
 
 ## Input Dataset
