--- a/vignettes/prediction_xgboost.Rmd
+++ b/vignettes/prediction_xgboost.Rmd
@@ -25,7 +25,7 @@ options(repos = c(
   CRAN = 'https://cloud.r-project.org'))
 
 # Install R package "dwc.wells"
-install.packages('dwc.wells')
+install.packages('dwc.wells', dependencies = TRUE)
 ```
 
 ## Input Dataset
